# alto-rendimiento

./: .gitignore  CMakeLists.txt  LICENSE  README.md
basics/: CMakeLists.txt  smart_pointers_ex.cpp
eigen_basics/: hello_world_eigen.cpp
img_proc/: CMakeLists.txt  img_proc.cpp  img_proc.hpp
opencv/: CMakeLists.txt  image_utils.h  show_image.cpp
openmp/: CMakeLists.txt  single_iterators.cpp
